# easybuild_robot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CI_CD_EXAMPLES.md  CREATED_FILES.md  LICENSE  LINTING.md  README.md  README_DI.md  XAMARIN_FIX_FILES.txt  XAMARIN_FIX_SUMMARY.txt  build.yaml  check-lint-setup.sh  pubspec.yaml  users.hive
.ai_instructions/: documentation_rules.md
docs/: ADD_PROJECT_CHEATSHEET.md  ADD_PROJECT_WIZARD.md  BUILDERS_SYSTEM.md  BUILD_COMMAND_CHANGES.md  CHANGELOG_2025_11_09.md  CHANGELOG_ADD_PROJECT_WIZARD.md  CHANGELOG_AUTO_REPOS.md  CHANGELOG_DELETE_PROJECT.md  CHANGELOG_PROJECTS.md  CHANGELOG_PROJECT_NAME_EDIT.md  CHANGELOG_PROJECT_TAGS_SEMANTIC.md  CHANGELOG_RELEASE_SUMMARY.md  CHANGELOG_SIMPLIFIED_BUILD.md  CHANGELOG_XAMARIN_FIX.md  CHANGELOG_XAMARIN_MULTI_PLATFORM.md  CI_CD_EXAMPLES.md  CODE_STYLE_TRANSLATION.md  CONTRIBUTING.md  CREATED_FILES.md  DOCUMENTATION_STRUCTURE.md  EDIT_PROJECT_CHEATSHEET.md  EDIT_PROJECT_WIZARD.md  FIX_CLONE_ERROR.md  FIX_CLONE_SUBDIRECTORY.md  FIX_EDIT_PROJECT_COMMAND.md  (+38 more)
python/: .ai-notes.md  .env.example  MIGRATION.md  README.md  easybuild_bot_py.service  fix.sh  full_restart.sh  install.sh  lint-help.sh  lint.sh  main.py  migrate_to_repos.sh  pyproject.toml  requirements-dev.txt  requirements.txt  restart_bot.sh  service.sh  test_add_project.py  test_command_matcher.py  test_di_architecture.py
python/docs/: BUGFIX_BOTGROUP_ATTRIBUTE.md  BUGFIX_EDIT_PROJECT_CALLBACK.md  BUGFIX_MARKDOWNV2_ESCAPING.md  BUILD_COMMAND_GROUP_FILTERING.md  CHANGELOG_ALL_CASES.md  COMMAND_ACCESS_LEVELS.md  DYNAMIC_COMMANDS.md  EDIT_PROJECT_GROUP_SELECTION.md  FEATURE_AUTO_BUILD_SINGLE_PROJECT.md  FIX_BUILD_COMMAND_GROUP_ACCESS.md  FIX_PROJECT_GROUP_ASSIGNMENT.md  GROUP_ACCESS_FIX.md  START_BOT.md  TROUBLESHOOTING.md  TTS_IMPLEMENTATION.md  VOICE_RECOGNITION.md  VOICE_TRANSFORMER.md  Надо упростить алгоритм сборки проекта:.ini
python/scripts/: assign_projects_to_groups.py  check_project_db.py  check_project_groups.py  check_version_simple.py  check_xamarin_structure.py  debug_version_check.py  import_from_hive_json.py  migrate_repos.py  test_add_project_wizard.py  test_edit_project_wizard.py  test_project_matcher.py  test_projects.py  test_xamarin_partial_platforms.py  test_xamarin_version.py  test_xamarin_version_fix.py  test_xamarin_version_service.py
python/src/easybuild_bot/: access_control.py  bot.py  command_matcher.py  config.py  di.py  models.py  project_matcher.py  speech_recognition.py  storage.py  text_to_speech.py
python/src/easybuild_bot/builders/: __init__.py  base.py  dotnet_maui_builder.py  factory.py  flutter_builder.py  xamarin_builder.py
python/src/easybuild_bot/commands/: __init__.py  base.py  callback_base.py  executor.py  factory.py  registry.py
python/src/easybuild_bot/commands/implementations/: __init__.py  add_project_command.py  allow_user_callback.py  block_user_callback.py  block_user_command.py  build_apk_callback.py  build_command.py  delete_project_callback.py  delete_project_command.py  edit_project_command.py  groups_command.py  help_command.py  prepare_release_callback.py  project_select_callback.py  projects_command.py  register_group_command.py  release_command.py  release_project_callback.py  start_command.py  unblock_user_callback.py  unblock_user_command.py  users_command.py  version_command.py
python/src/easybuild_bot/handlers/: __init__.py  add_project_wizard.py  edit_project_wizard.py  release_wizard.py
python/src/easybuild_bot/services/: __init__.py  git_service.py
python/src/easybuild_bot/version_services/: __init__.py  base.py  dotnet_maui_version_service.py  factory.py  flutter_version_service.py  xamarin_version_service.py
python/tests/: test_command_matcher.py  test_command_pattern.py  test_dynamic_commands.py
(+42 files in other folders)
